namespace FactoryPattern;

public abstract class Creator
{
    public abstract PagamentoProduct FactoryMethod();
}